Add section logo download

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     <li>
                         <a href="#why-troyes">Pourquoi à Troyes</a>
                     </li>
+
+                    <li>
+                        <a href="#logo-psd">Logo</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -110,7 +114,9 @@
             </p>
         </section>
 
-
+        <section id="logo-psd">
+            <h2>Vous pouvez télécharger mon logo <a href="../logo/logo.psd" download>ici</a></h2>
+        </section>
     </div>
 </body>
 
