--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                     </li>
 
                     <li>
-                        <a href="#why-dut">Pourquoi DUT</a>
+                        <a href="#why-dut">Pourquoi un DUT ?</a>
                     </li>
 
                     <li>
-                        <a href="#why-mmi">Pourquoi MMI</a>
+                        <a href="#why-mmi">Pourquoi MMI ?</a>
                     </li>
 
                     <li>
-                        <a href="#why-troyes">Pourquoi à Troyes</a>
+                        <a href="#why-troyes">Pourquoi à Troyes ?</a>
                     </li>
 
                     <li>
