--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </section>
 
         <section id="logo-psd">
-            <h2>Vous pouvez télécharger mon logo <a href="assets/images/logo.psd" download>ici</a></h2>
+            <h2>Vous pouvez télécharger mon logo en version PSD <a href="assets/images/logo.psd" download>ici</a></h2>
         </section>
     </div>
 </body>
